[package]
name = "honorable-bot"
version = "0.1.0"
authors = ["Donovan Dall <donovan_dall@sercomm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter-stream = "0.12.0"
futures = "0.3.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serenity = "0.10"