[package]
name = "honorable-bot"
version = "0.1.0"
authors = ["Donovan Dall <donovan_dall@sercomm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
anyhow = "1.0.40"
twitter-stream = "0.12.0"
# egg-mode = "0.15"
egg-mode = { git = "https://github.com/egg-mode-rs/egg-mode", branch = "master" }
futures = "0.3.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serenity = "0.10"
serde_json = "1.0.64"