[package]
name = "honorable-bot"
version = "0.1.0"
authors = ["Donovan Dall <donovan_dall@sercomm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
anyhow = "1.0.40"
egg-mode = { git = "https://github.com/egg-mode-rs/egg-mode", branch = "master" }
coingecko = { git = "https://github.com/AwesomeIbex/coingecko-rs", branch = "feature/tokio" }
futures = "0.3.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serenity = "0.10"
serde_json = "1.0.64"
serde = "1.0.125"
reqwest = { version = "0.11.2", features = ["json"] }
